# blog_django

./: .gitignore  README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
djangoapp/: requirements.txt
djangoapp/blog/: admin.py  urls.py  views.py
djangoapp/blog/migrations/: 0001_initial.py  0002_category_page.py  0003_page_content_page_is_published.py  0004_alter_page_content.py  0005_post.py  0006_alter_post_content_alter_post_created_at_and_more.py  0007_postattachment.py
djangoapp/blog/models/: __init__.py  category_model.py  page_model.py  post_model.py  summernote_attachmente_model.py  tag_model.py
djangoapp/blog/templates/blog/: base.html
djangoapp/blog/templates/blog/pages/: index.html  post.html
djangoapp/blog/templates/blog/partials/: _footer.html  _head.html  _header.html  _post-card.html
djangoapp/blog/views_mod/: __init__.py  category_by.py  create_by.py  index.py  page copy.py  page.py  search_by.py
djangoapp/project/: settings.py  urls.py  wsgi.py
djangoapp/site_setup/: admin.py  apps.py  context_processors.py  models.py
djangoapp/site_setup/migrations/: 0001_initial.py  0002_sitesetup.py  0003_menulink_site_setup.py  0004_sitesetup_favicon.py  0005_alter_sitesetup_description_alter_sitesetup_favicon_and_more.py  0006_alter_menulink_site_setup.py
djangoapp/utils/: images.py  log.py  model_validator.py  slug_rands.py  tempCodeRunnerFile.py
dotenv_files/: .env _utilizado_projeto  .env-exemple
scripts/: commands.sh
