[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["bruno <b_linhares@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.5"
pillow = "^10.3.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
